ttrss/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: HTTP_PORT
              valueFrom:
                configMapKeyRef:
                  key: HTTP_PORT
                  name: env
            - name: TTRSS_DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_NAME
                  name: env
            - name: TTRSS_DB_PASS
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_PASS
                  name: env
            - name: TTRSS_DB_USER
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_USER
                  name: env
          image: cthulhoo/ttrss-fpm-pgsql-static:latest
          name: app
          volumeMounts:
            - mountPath: /var/www/html
              name: app
            - mountPath: /opt/tt-rss/config.d
              name: app-claim1
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: app
          persistentVolumeClaim:
            claimName: app
        - name: app-claim1
          persistentVolumeClaim:
            claimName: app-claim1
            readOnly: true
