ttrss/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: HTTP_PORT
              valueFrom:
                configMapKeyRef:
                  key: HTTP_PORT
                  name: env
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_NAME
                  name: env
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_PASS
                  name: env
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_USER
                  name: env
            - name: TTRSS_DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_NAME
                  name: env
            - name: TTRSS_DB_PASS
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_PASS
                  name: env
            - name: TTRSS_DB_USER
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_USER
                  name: env
          image: postgres:15-alpine
          name: db
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db
      restartPolicy: Always
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
