ttrss/mercury-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mercury
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mercury
  template:
    metadata:
      labels:
        app: mercury
    spec:
      containers:
        - image: wangqiru/mercury-parser-api:latest
          name: mercury
          ports:
            - name: http
              containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
