ttrss/updater-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: updater
  name: updater
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: updater
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: updater
    spec:
      containers:
        - args:
            - /opt/tt-rss/updater.sh
          image: cthulhoo/ttrss-fpm-pgsql-static:latest
          name: updater
          volumeMounts:
            - mountPath: /var/www/html
              name: app
            - mountPath: /opt/tt-rss/config.d
              name: updater-claim1
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: app
          persistentVolumeClaim:
            claimName: app
        - name: updater-claim1
          persistentVolumeClaim:
            claimName: updater-claim1
            readOnly: true
