ttrss/web-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: web-nginx
  name: web-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: web-nginx
    spec:
      containers:
        - env:
            - name: HTTP_PORT
              valueFrom:
                configMapKeyRef:
                  key: HTTP_PORT
                  name: env
            - name: TTRSS_DB_NAME
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_NAME
                  name: env
            - name: TTRSS_DB_PASS
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_PASS
                  name: env
            - name: TTRSS_DB_USER
              valueFrom:
                configMapKeyRef:
                  key: TTRSS_DB_USER
                  name: env
          image: cthulhoo/ttrss-web-nginx:latest
          name: web-nginx
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: app
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: app
          persistentVolumeClaim:
            claimName: app
            readOnly: true
