ttrss/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: http
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
