ttrss/mercury-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mercury-svc
spec:
  ports:
    - name: http-svc
      port: 3000
      targetPort: 3000
  selector:
    app: mercury
